--- a/mysolanaapp/Anchor.toml
+++ b/mysolanaapp/Anchor.toml
@@ -1,7 +1,7 @@
 [features]
 seeds = false
 [programs.localnet]
-blog_anchor = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+mysolanaapp = "7LzgnW6TdRxWu8hU7ihM1THwxVHuMjCgg7afyKrB2DWZ"
 
 [registry]
 url = "https://anchor.projectserum.com"
@@ -11,4 +11,4 @@ cluster = "localnet"
 wallet = "/Users/ricardocastelloroman/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run mocha -t 1000000 tests/"
